--- a/src/test/resources/corner/selectBox/test_select.html
+++ b/src/test/resources/corner/selectBox/test_select.html
@@ -21,7 +21,7 @@ djConfig = { isDebug: true,
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/tapestry/core.js"></script>
 <SCRIPT LANGUAGE="JavaScript" src="../../../../main/js/corner/corner.js"></script>
 <script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/prototype.js"> </script>
-<script type="text/javascript" src="selectBox.js"> </script>  
+<script type="text/javascript" src="../../../../main/java/corner/orm/tapestry/component/selectBox/selectBox.js"> </script>  
 <script type="text/javascript">
 dojo.require("dojo.logging.Logger");
 dojo.log.setLevel(dojo.log.getLevel("WARNING"));
