--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -14,21 +14,24 @@
 		<a jwcid="@PageLink" page="validator/FieldPlusEqForm"><span key="FieldPlusEqForm" /></a><br>
 		<a jwcid="@PageLink" page="validator/CheckboxGroupRequiredForm"><span key="CheckboxGroupRequiredForm" /></a><br>
 		<a jwcid="@PageLink" page="upload/APersonList"><span key="uploadBox" /></a><br>
-			
-		<hr/>
-			Widget
-		<a jwcid="@PageLink" page="widget/QueryDialogTest"><span key="QueryDialog" /></a><br>
-		<a  page="widget/tree"><span key="Tree" /></a><br>
-		
-		<hr/>
-			GainPoint
-		<a jwcid="@PageLink" page="gainPoint/AList"><span key="GainPoint" /></a><br>
-		<hr/>
-			Prototype
-		<a jwcid="@PageLink" page="prototype/AList"><span key="Prototype" /></a><br>
-		<hr/>
-			iframe
-		<a jwcid="@PageLink" page="iframe/iframe"><span key="iframe" /></a><br>
-		
+		<hr>
+        <table width="100" border="1">
+          <tr>
+            <td><a jwcid="@PageLink" page="widget/QueryDialogTest"><span key="QueryDialog" >QueryDialog</span></a></td>
+            <td><a page="widget/tree"><span key="Tree">Tree</span></a></td>
+          </tr>
+          <tr>
+            <td><a jwcid="@PageLink" page="gainPoint/AList"><span key="GainPoint">GainPoint</span></a></td>
+            <td><a jwcid="@PageLink" page="selectbox/SelectBox"><span key="SelectBox">SelectBox</span></a></td>
+          </tr>
+          <tr>
+            <td><a jwcid="@PageLink" page="prototype/AList"><span key="Prototype">Prototype</span></a></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td><a jwcid="@PageLink" page="iframe/iframe"><span key="iframe">iframe</span></a></td>
+            <td></td>
+          </tr>
+        </table>		
     </body>
 </html>
