--- a/src/test/resources/corner/gain/test_gainPoint.html
+++ b/src/test/resources/corner/gain/test_gainPoint.html
@@ -61,7 +61,7 @@ function reElementValues(){
       <table id="t">
 		<tr jwcid="GainPointIdField">
 			<td>
-				id<input type="hidden" id="poid" name ="poid" value="fjkdsajfldsu4o329048347832012j4kl48"	/>
+				id<input type="text" id="poid" name ="poid" value="fjkdsajfldsu4o329048347832012j4kl48"	/>
 			</td>
 			<td>
 				field 1 <input id="field1" type="text" name="name" value="aaaaa" />
@@ -82,14 +82,44 @@ function reElementValues(){
 			</td>
 		</tr>
 	</table>
+	<hr/>
+	name <a href=# onclick="gp2.addRow()"><img src="../../../../main/webapp/images/add.png" border="0"/></a><br/>
+	<a href=# onclick="gp2.addRows()">adds</a><br/>
+	<a href=# onclick="gp2.delLastRow()""><img src="../../../../main/webapp/images/cancel.png" border="0"/></a><br/>
+      <table id="t2">
+		<tr jwcid="GainPointIdField">
+			<td>
+				id<input type="text" name ="po2id" value="fjkdsajfldsu4o329048347832012j4kl48"	/>
+			</td>
+			<td>
+				field 1 <input type="text" name="name2" value="aaaaa" />
+			</td>
+			<td>
+				field 2 <input type="text" name="cnName2" value="bbbbbb" />
+			</td>
+            <td>
+				field 3 <input name="show2_check" type="checkbox" value="" onclick="checkHidField('show2',this)" />
+				<input type="hidden" name="show2" value=""	/>
+			</td>
+			<td>
+				field 4 <input name="subsidy2_check" type="checkbox"  onclick="checkHidField('subsidy2',this)" />
+				<input type="hidden" name="subsidy2" value=""/>
+			</td>
+			<td>
+				<a href=# onclick="gp2.delRowById(this)"><img src="../../../../main/webapp/images/cancel.png" border="0"/></a>
+			</td>
+		</tr>
+	</table>
 	<input type="submit" />
 </form>
 
-<a href=# onclick="gp.init()">reElementValues</a><br />
+<a href=# onclick="gp.init()">reElementValues1</a><br />
+<a href=# onclick="gp2.init()">reElementValues2</a><br />
 
 <script type="text/javascript">
 <!--
-	var gp = new GainPoint("t","poid",4,{"id":["282828c11361334801136133f7cd0002","282828c11361334801136133f7cd0003","282828c113613348011361345cc00006","282828c113613348011361345cc00007"],"name":["1","z","5","6"],"cnName":["q","x","p","o"],"show":[null,"","on",""],"subsidy":[null,null,"on",null]},['show','subsidy']);
+	var gp = new GainPoint("t","poid",4,{"poid":["282828c11361334801136133f7cd0002","282828c11361334801136133f7cd0003","282828c113613348011361345cc00006","282828c113613348011361345cc00007"],"name":["1","z","5","6"],"cnName":["q","x","p","o"],"show":[null,"","on",""],"subsidy":[null,null,"on",null]},['show','subsidy']);
+	var gp2 = new GainPoint("t2","po2id",4,{"po2id":["111","222","333","444"],"name2":["a","zd","5e","6"],"cnName2":["q","xs","pe","oa"],"show2":[null,"on","on",""],"subsidy2":[null,null,"on","on"]},['show2','subsidy2']);
 // --></script>
 	
 </body>
