git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4143 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/gain/test_gainPointRunComponent.html
+++ b/src/test/resources/corner/gain/test_gainPointRunComponent.html
@@ -76,11 +76,10 @@ djConfig = { isDebug: true
 	calc=function(evt){
 		var elements = document.getElementsByName("cnName");
 		var money=0;
-		for (var i in elements){
+		for (var i=0;i<elements.length;i++){
 			money +=getNumber(elements[i].value);
 		}
 		dojo.debug("money  = " + money);
-		
 		dojo.byId('caps').innerHTML = "<font color='#FF0000'>"+changeToBig(money)+"</font>";
 	
 	}
