--- a/src/test/resources/corner/window/test_win.html
+++ b/src/test/resources/corner/window/test_win.html
@@ -129,8 +129,8 @@ dojo.require("tapestry.namespace")
 </form>	
 <script>
 <!--
-function selectRecord(obj){
-			dojo.byId('testddd').value=obj.getAttribute("label");
+function selectRecord(obj,fieldElement){
+	dojo.byId('testddd').value=obj.getAttribute("label");
 }
 
 function aaa(){
@@ -154,7 +154,7 @@ function aaa(){
 									   "resizable":"true","closable":"true","minimizable":"true","maximizable":"true",
 									   "draggable":"true","showEffectOptions":"none","hideEffectOptions":"none","effectOptions":"none",
 									   "opacity":1,"recenterAuto":"true","gridX":1,"gridY":1,"wiredDrag":"false",
-									   "destroyOnClose":"false","all callbacks":"none"},"",true,"test","aaa");
+									   "destroyOnClose":"false","all callbacks":"none"},"selectRecord",true,"test","aaa");
 	
 // --></script></body>
 </html>
