纠正对值的依赖
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4148 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/widget/test_Protype_Matrix.html
+++ b/src/test/resources/corner/widget/test_Protype_Matrix.html
@@ -201,7 +201,7 @@ Matrix.prototype={
 			row.deleteCell(colIndex);
 			if(i>0){
 				rowNodes=this.inputNodes[i];
-				rowNodes.remove(colIndex-1);
+				rowNodes.remove(colIndex-1-this.templateTableCols);
 			}
 		}
 		this.sumValue();
