git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4152 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/autocompleter/test_autocompleter.html
+++ b/src/test/resources/corner/autocompleter/test_autocompleter.html
@@ -22,7 +22,8 @@ djConfig = { isDebug: true
 </head>
 
 <body>
-field 1 <input id="CustomIdField"	/>
+update files<input id="updateField1"><input id="updateField2"><br/>
+field 1 <input id="CustomIdField" name="CustomIdField"	type="text" />
 
 <script type="text/javascript">
 <!--
